--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </table>
     <table cellspacing="10">
         <tr>
-            <thead>Skills</thead>
+            <h2>Skills</h2  >
             <tbody>
             <td>HTML5 &#11088;&#11088;</td>
             <td>CSS3 &#11088;&#11088;</td>
